kubernetes/clusters/kenobi/home/templates/snipeit/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: snipeit
  labels:
    app.kubernetes.io/instance: kenobi-home
    app.kubernetes.io/name: snipeit
    app.kubernetes.io/version: 5.4.1

spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: kenobi-home
      app.kubernetes.io/name: snipeit
      app.kubernetes.io/version: 5.4.1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kenobi-home
        app.kubernetes.io/name: snipeit
        app.kubernetes.io/version: 5.4.1
    spec:
      containers:
        - name: snipeit
          image: snipe/snipe-it:5.4.1
          ports:
            - containerPort: 80
