kubernetes/clusters/kenobi/home/templates/snipeit/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: snipeit

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`snipeit.feldman.in`)
      kind: Rule
      services:
        - name: snipeit
          port: 80
  tls:
    secretName: snipeit-feldman-in-tls
